[gd_scene load_steps=5 format=4 uid="uid://cpb0xnjo27wl6"]

[ext_resource type="Script" path="res://shared/ui/scroll_text/scroll_text_segment/scroll_text_segment.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cesq2443g64c4" path="res://shared/puzzle/puzzle_segment/assets/segment_block.tscn" id="2"]

[sub_resource type="Animation" id="Animation_h1qva"]
resource_name = "reveal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DetachFromContainerLayout/SegmentBlock:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qbpf"]
_data = {
"reveal": SubResource("Animation_h1qva")
}

[node name="ScrollTextSegment" type="MarginContainer"]
anchor_right = 1.0
grow_horizontal = 2
size_flags_vertical = 6
script = ExtResource("1")

[node name="FlowContainer" type="FlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="MouseBlocker" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="DetachFromContainerLayout" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 1

[node name="SegmentBlock" parent="DetachFromContainerLayout" instance=ExtResource("2")]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_right = 1920.0
offset_bottom = 64.0
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_0qbpf")
}

[connection signal="resized" from="FlowContainer" to="." method="_on_flow_container_resized"]
